final_cli_utf8.txt
cargo : warning: unused import: `Path`
At line:1 char:1
+ cargo check -p cli --message-format=short > 
final_cli.txt 2>&1; Get-C ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: 
(warni    ng: unused import: `Path`:String) [], 
RemoteEx    ception
    + FullyQualifiedErrorId : NativeCommandError
 
 --> crates\extractors\src\fbref.rs:3:17
  |
3 | use std::path::{Path, PathBuf};
  |                 ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

warning: unused imports: `Context` and `Result`
 --> crates\extractors\src\official.rs:1:14
  |
1 | use anyhow::{Result, Context};
  |              ^^^^^^  ^^^^^^^

warning: unused import: `csv::ReaderBuilder`
 --> crates\extractors\src\clubelo.rs:3:5
  |
3 | use csv::ReaderBuilder;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `Path`
 --> crates\extractors\src\sofifa.rs:3:17
  |
3 | use std::path::{Path, PathBuf};
  |                 ^^^^

warning: unused import: `anyhow::Result`
  --> crates\extractors\src\lib.rs:14:5
   |
14 | use anyhow::Result;
   |     ^^^^^^^^^^^^^^

warning: fields `client` and `base_url` are never 
read
 --> crates\extractors\src\official.rs:5:5
  |
4 | pub struct OfficialApiExtractor {
  |            -------------------- fields in 
this struct
5 |     client: Client,
  |     ^^^^^^
6 |     base_url: String,
  |     ^^^^^^^^
  |
  = note: `#[warn(dead_code)]` (part of 
`#[warn(unused)]`) on by default

warning: `extractors` (lib) generated 6 warnings 
(run `cargo fix --lib -p extractors` to apply 5 
suggestions)
    Checking cli v0.1.0 
(C:\Dev\Repos\football-dq\crates\cli)
crates\cli\src\main.rs:6:32: error[E0432]: 
unresolved imports `extractors::matchhistory::Matc
hhistoryExtractor`, 
`extractors::matchhistory::MatchhistoryConfig`: 
no `MatchhistoryExtractor` in `matchhistory`, no 
`MatchhistoryConfig` in `matchhistory`
crates\cli\src\main.rs:65:17: error[E0433]: 
failed to resolve: use of unresolved module or 
unlinked crate `domain`: use of unresolved module 
or unlinked crate `domain`
crates\cli\src\main.rs:90:39: error[E0061]: this 
method takes 2 arguments but 1 argument was 
supplied
error: could not compile `cli` (bin "cli") due to 
3 previous errors
